# vastde-orch

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  KNOWN_ISSUES.md  README.md  pyproject.toml
config/: vastde.example.yaml
docs/: manual-testing.md  research-interactive-ux.md  stage-b-prd.md  vms-api-full-catalog.md  vms-endpoints-reference.md  wi-tenant-reference.md
docs/research/: k8s-registration-investigation-2026-05-31.md
documentation/: steps.md
functions/fraud-scorer/: Aptfile  README.md  config.example.yaml  customDeps  main.py
functions/json-validate/: README.md  cloudevent.yaml  config.yaml  main.py
sample/: answers_demo_tenant.yaml  cheking.py  gt-tenant.yaml  nc-tenant.yaml  tenant-enable.example.yaml  tenant-setup.example.yaml  test-tenant.yaml  vastde.template.yaml
sample/testing/: usc-fraud-pipeline.yaml  wi-fraud-pipeline.yaml
scripts/: list_vippools.py  setup_tenant.py  test_minimal_enable.py
src/vastde_orch/: __init__.py  cli.py  logging.py  reconciler.py  vippool_planner.py
src/vastde_orch/bootstrap/: __init__.py  tenant.py  tenant_enable.py
src/vastde_orch/clients/: __init__.py  kube.py  (+4 more)
tests/: test_auto_resources.py  test_cli_dispatch.py  test_clients_shell.py  test_clients_vms.py  test_config_models.py  test_e2e_wizard_roundtrip.py  test_enablement.py  test_interactive_confirm.py  test_interactive_orchestrator.py  test_interactive_prompts.py  test_interactive_tty.py  test_interactive_wizard.py  test_interactive_yaml_emit.py  test_models_minimal.py  test_pipelines.py  test_reconciler.py
tests/fixtures/: answers_full.yaml
(+30 files in other folders)
