[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vastde-orch"
version = "0.1.0"
description = "Declarative YAML-driven automation for VAST DataEngine enablement and pipeline creation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yemalin Godonou", email = "gyemalin@gmail.com" }]
dependencies = [
    "vastpy>=0.3.13",
    "click>=8.1",
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "kubernetes>=29.0",
    "questionary>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
vastde-orch = "vastde_orch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vastde_orch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=vastde_orch --cov-report=term-missing"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
